[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Enemies/FlyingEnemy/FlyingEnemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0944

[sub_resource type="CircleShape2D" id=2]
radius = 469.154

[node name="FlyingEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )
health = 2
move_speed = 60.0

[node name="Icon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetectionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionRadius"]
shape = SubResource( 2 )

[connection signal="body_entered" from="PlayerDetectionRadius" to="." method="_on_PlayerDetectionRadius_body_entered"]
[connection signal="body_exited" from="PlayerDetectionRadius" to="." method="_on_PlayerDetectionRadius_body_exited"]
